Make text visible on jumbotron and fix blur bg

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -40,8 +40,40 @@ section .row:first-child h2 {
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .quotes-container {}
 
 .features-container {}
+
+/*Jumbotron*/
+.jumbotron {
+       background-color: #50262653;
+    backdrop-filter: blur(5px);
+    border-radius: 40px;
+    box-shadow: 0px 4px 40px #502626;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    height: 100%;
+    padding:30px 50px;
+}
+
+.jumbotron > h1 {
+    font-weight:bold;
+    margin-bottom: 30px;
+}
+
+.jumbotron > .text-muted > small {
+    color: rgb(208, 207, 207);
+}
+
+.jumbotron button {
+    width:150px;
+    margin:auto;
+}
